--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selected Works | Designer Austin</title>
+    <title>Austin Design | Industrial & Product Solutions</title>
     <!DOCTYPE html>
     <html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Selected Works | Designer Austin</title>
+        <title>Austin Design | Industrial & Product Solutions</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <!DOCTYPE html>
         <html lang="en">
@@ -19,14 +19,14 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Selected Works | Designer Austin</title>
+            <title>Austin Design | Industrial & Product Solutions</title>
             <!DOCTYPE html>
             <html lang="en">
 
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Selected Works | Designer Austin</title>
+                <title>Austin Design | Industrial & Product Solutions</title>
                 <link rel="preconnect" href="https://fonts.googleapis.com">
                 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
                 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap"
