--- a/project_cyclonic_purity.html
+++ b/project_cyclonic_purity.html
@@ -10,6 +10,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+    <style>
+        /* 強制互動容器設定 */
+        .nuclear-container {
+            position: relative !important;
+            display: inline-block !important;
+            overflow: hidden !important;
+            border-radius: 12px !important;
+            cursor: pointer !important;
+            margin-bottom: 20px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            /* 加一點陰影增加質感 */
+        }
+
+        /* 圖片本體設定 - 預設就是模糊的 */
+        .nuclear-image {
+            display: block !important;
+            width: 100% !important;
+            /* 關鍵修改：預設就加上模糊濾鏡 */
+            filter: blur(10px) !important;
+            transform: scale(1.02) !important;
+            /* 稍微放大避免模糊邊緣露白 */
+            transition: all 0.5s ease !important;
+        }
+
+        /* 遮罩層設定 (預設透明) */
+        .nuclear-overlay {
+            position: absolute !important;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.3) !important;
+            /* 稍微蓋一層淺黑 */
+            display: flex !important;
+            justify-content: center !important;
+            align-items: center !important;
+            opacity: 0 !important;
+            /* 預設看不到按鈕 */
+            transition: all 0.4s ease !important;
+            z-index: 10;
+        }
+
+        /* --- 關鍵互動效果 --- */
+
+        /* 滑鼠移上去：圖片稍微變清楚一點點，增加互動感 */
+        .nuclear-container:hover .nuclear-image {
+            filter: blur(5px) !important;
+            /* 模糊度降低 */
+            transform: scale(1.05) !important;
+            /* 再放大一點 */
+        }
+
+        /* 滑鼠移上去：按鈕浮現，背景變深 */
+        .nuclear-container:hover .nuclear-overlay {
+            opacity: 1 !important;
+            background-color: rgba(0, 0, 0, 0.6) !important;
+            /* 加深背景對比 */
+        }
+
+        /* 按鈕樣式 */
+        .nuclear-btn {
+            background: #ff6600 !important;
+            color: white !important;
+            padding: 15px 35px !important;
+            border-radius: 50px !important;
+            text-decoration: none !important;
+            font-weight: bold !important;
+            font-size: 18px !important;
+            letter-spacing: 1px;
+            box-shadow: 0 5px 15px rgba(255, 102, 0, 0.4) !important;
+            transform: translateY(20px);
+            /* 預設位置偏下 */
+            transition: all 0.4s ease !important;
+        }
+
+        /* 滑鼠移上去：按鈕上浮歸位 */
+        .nuclear-container:hover .nuclear-btn {
+            transform: translateY(0px) !important;
+        }
+    </style>
 </head>
 
 <body class="lang-en">
@@ -80,36 +160,131 @@
             <aside class="sticky-text-col">
                 <div class="sticky-content">
                     <h2>
-                        <span class="en">Design Concept</span>
-                        <span class="zh">設計理念</span>
+                        <span class="en">Core Evolution</span>
+                        <span class="zh">核心進化</span>
                     </h2>
-                    <p>
-                        <span class="en">This project focuses on the core principles of cyclonic separation to deliver a
-                            pure and efficient coffee roasting experience.</span>
-                        <span class="zh">本專案著重於旋風分離的核心原理，旨在提供純淨且高效的烘豆體驗。</span>
-                    </p>
-                    <p>
-                        <span class="en">By optimizing airflow and structural components, we achieved a balance of form
-                            and function suitable for artisanal craftsmanship.</span>
-                        <span class="zh">透過優化氣流與結構組件，我們實現了適合職人工藝的形式與功能平衡。</span>
-                    </p>
+
+                    <div style="margin-bottom: 2rem;">
+                        <h4>
+                            <span class="en">The Constraint: Goodbye to the Giant Tower</span>
+                            <span class="zh">設計困境：告別巨大的外掛巨塔</span>
+                        </h4>
+                        <p>
+                            <span class="en">Traditional Single Cyclones are effective, but volume often correlates with
+                                efficiency. To maintain suction, they usually hang like giant barrels beside the
+                                roaster, consuming valuable space and disrupting industrial aesthetics. Our goal was
+                                radical: Can we shrink it, or even hide it inside?</span>
+                            <span class="zh">傳統的旋風集塵器 (Single Cyclone)
+                                雖然有效，但體積往往與效率成正比。為了維持吸力，它們通常像巨大的圓桶『掛』在精美的烘豆機旁，不僅佔用寶貴的店面空間，更破壞了整體的工業設計美感。我們的目標很激進：能不能把它變小，甚至藏進機器裡？</span>
+                        </p>
+                    </div>
+
+                    <div style="margin-bottom: 2rem;">
+                        <h4>
+                            <span class="en">The Innovation: Multi-Cyclone Array</span>
+                            <span class="zh">核心技術：Multi-Cyclone 多管陣列</span>
+                        </h4>
+                        <p>
+                            <span class="en">To reduce volume, we abandoned the large single tube for a
+                                <strong>Multi-Cyclone</strong> parallel design. Physics dictates that the smaller the
+                                diameter, the stronger the <strong>Centrifugal Force (G-Force)</strong>. By dispersing
+                                airflow into multiple precision micro-cones, we drastically reduced height and captured
+                                fine dust that traditional barrels missed.</span>
+                            <span class="zh">為了縮小體積，我們捨棄了傳統大單管，改採用 <strong>Multi-Cyclone
+                                    多管並聯設計</strong>。物理原理告訴我們：旋風管的直徑越小，氣流旋轉的 <strong>離心力 (G-Force)</strong>
+                                越強。通過將巨大的氣流分散到多個精密的微型椎體中，我們不僅大幅縮減了設備高度，更捕捉到了傳統大桶無法過濾的細微粉塵。</span>
+                        </p>
+                    </div>
+
+                    <div>
+                        <h4>
+                            <span class="en">The Integration: Compact Efficiency</span>
+                            <span class="zh">最終成果：小體積，大效率</span>
+                        </h4>
+                        <p>
+                            <span class="en">Validated by CFD simulation, we improved efficiency while shrinking volume
+                                to 1/3rd. This transforms the system from an external appendage into a core organ
+                                perfectly <strong>Integrated</strong> within the roaster. This is the evolution from
+                                "equipment" to "product".</span>
+                            <span class="zh">透過流場模擬 (CFD) 的驗證，我們成功將集塵效率提升，同時將體積縮減至原來的 1/3。這讓集塵系統不再是外接的贅字，而是能夠完美
+                                <strong>整合 (Integrate)</strong> 進烘豆機內部的核心器官。這就是從『設備』到『產品』的進化。</span>
+                        </p>
+                    </div>
                 </div>
             </aside>
 
             <!-- Right: Image Stream -->
             <div class="image-stream-col">
-                <div class="stream-image-placeholder">
-                    <span>Sketch / Wireframe</span>
-                </div>
-                <div class="stream-image-placeholder">
-                    <span>Exploded View / Structure</span>
-                </div>
-                <div class="stream-image-placeholder">
-                    <span>Final Rendering</span>
-                </div>
-                <div class="stream-image-placeholder">
-                    <span>Detail Shot</span>
-                </div>
+                <!-- 1. The Context -->
+                <figure style="margin: 0; margin-bottom: 3rem;">
+                    <img src="assets/CoffeeChaff.png" alt="Coffee Chaff Context"
+                        style="width: 100%; height: auto; display: block; border-radius: 8px; box-shadow: 0 4px 20px rgba(0,0,0,0.3);">
+                    <figcaption style="margin-top: 1rem; text-align: left;">
+                        <div
+                            style="font-size: 0.8rem; color: var(--accent-color); font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.5rem;">
+                            The Context</div>
+                        <div style="color: #ccc; font-size: 0.95rem; line-height: 1.5;">
+                            <span class="en">Coffee Chaff - Large volume of lightweight waste generated during
+                                roasting.</span>
+                            <span class="zh">咖啡銀皮 (Chaff) - 烘豆過程產生的大量輕質廢棄物。</span>
+                        </div>
+                    </figcaption>
+                </figure>
+
+                <!-- 2. The Solution -->
+                <figure style="margin: 0; margin-bottom: 3rem;">
+                    <img src="assets/CycloneCollectChaff.png" alt="Cyclone Collection Result"
+                        style="width: 100%; height: auto; display: block; border-radius: 8px; box-shadow: 0 4px 20px rgba(0,0,0,0.3);">
+                    <figcaption style="margin-top: 1rem; text-align: left;">
+                        <div
+                            style="font-size: 0.8rem; color: var(--accent-color); font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.5rem;">
+                            The Solution</div>
+                        <div style="color: #ccc; font-size: 0.95rem; line-height: 1.5;">
+                            <span class="en">On-site Achievement - Transparent management of collected chaff.</span>
+                            <span class="zh">現場實績 - 實際導入後的收集狀況，透明化管理。</span>
+                        </div>
+                    </figcaption>
+                </figure>
+
+                <!-- 3. The Design -->
+                <figure style="margin: 0; margin-bottom: 3rem;">
+                    <div class="nuclear-container">
+                        <img src="assets/MultiCyclone.png" alt="Multi Cyclone" class="nuclear-image">
+                        <div class="nuclear-overlay">
+                            <a href="contact.html" class="nuclear-btn">Start Your Project</a>
+                        </div>
+                    </div>
+                    <figcaption style="margin-top: 1rem; text-align: left;">
+                        <div
+                            style="font-size: 0.8rem; color: var(--accent-color); font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.5rem;">
+                            The Design</div>
+                        <div style="color: #ccc; font-size: 0.95rem; line-height: 1.5;">
+                            <span class="en">3D Structure - Multi-tube cyclonic separator designed for silver skin
+                                properties.</span>
+                            <span class="zh">3D 結構設計 - 針對銀皮特性設計的多管式旋風分離器。</span>
+                        </div>
+                    </figcaption>
+                </figure>
+
+                <!-- 4. The Science -->
+                <figure style="margin: 0; margin-bottom: 3rem;">
+                    <div class="nuclear-container">
+                        <img src="assets/CycloneFlowSimulation.png" alt="Simulation" class="nuclear-image">
+                        <div class="nuclear-overlay">
+                            <a href="contact.html" class="nuclear-btn">Start Your Project</a>
+                        </div>
+                    </div>
+                    <figcaption style="margin-top: 1rem; text-align: left;">
+                        <div
+                            style="font-size: 0.8rem; color: var(--accent-color); font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.5rem;">
+                            The Science</div>
+                        <div style="color: #ccc; font-size: 0.95rem; line-height: 1.5;">
+                            <span class="en">Flow Validation - CFD simulation ensuring airflow paths meet
+                                expectations.</span>
+                            <span class="zh">流場驗證 - 透過 CFD 模擬確保氣流路徑符合預期。</span>
+                        </div>
+                    </figcaption>
+                </figure>
             </div>
         </section>
 
